test/loop/confidence/errors/group_errors_2.loop
# Errors in pattern matching functions

func() ->
  (1 + 2

